dataset1235/2025-2/2868285114/users/2357405339/executions/3071719669_1914301514.log
== SUBMISSION (2025-08-28 23:05:43)
-- CODE: 
consumo = float(input())
gasto = consumo * 0,22 + 23
icms = gasto * 0.25
valor = gasto = icms
print(round(valor,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:03:12)
-- CODE: 
consumo = float(input())
gasto = consumo * 0,22 + 23
icms = gasto * (0.25)
valor = gasto = icms
print(round(valor,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (0.25)
           ~~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (0.25)
           ~~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (0.25)
           ~~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (0.25)
           ~~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (0.25)
           ~~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (0.25)
           ~~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:48:01)
-- CODE: 
consumo = float(input())
gasto = consumo * 0,22 + 23
icms = gasto * (31/100)
valor = gasto = icms
print(round(valor,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:02:27)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
---- user output:
None
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
---- user output:
None
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
---- user output:
None
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
---- user output:
None
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
---- user output:
None
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:01:11)
-- CODE: 
consumo = float(input())
gasto = consumo * 0,22 + 23
icms = gasto * (25/100)
valor = gasto = icms
print(round(valor,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:00:22)
-- CODE: 
consumo = float(input())
gasto = consumo * 0,22 + 23
icms = gasto * (25/100)
valor = gasto = icms
print(round(valor,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:03:42)
-- CODE: 
consumo = float(input())
gasto = consumo * 0,22 + 23
icms = gasto * (0.25)
valor = gasto = icms
print(round(valor,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (0.25)
           ~~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (0.25)
           ~~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (0.25)
           ~~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (0.25)
           ~~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (0.25)
           ~~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (0.25)
           ~~~~~~^~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:02:54)
-- CODE: 
consumo = int(input())
gasto = consumo * 0,22 + 23
icms = gasto * (0.25)
valor = gasto = icms
print(round(valor,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '180.29'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '113.86'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '221.31'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '165.7'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    consumo = int(input())
              ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '72.51'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:04:24)
-- CODE: 
consumo = float(input())
gasto = consumo * 0,22 + 23
icms = gasto * 0.25
valor = gasto = icms
print(round(valor,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:09:56)
-- CODE: 
consumo = float(input())
gasto = consumo * 0.22 + 23
icms = gasto * (31/100)
valor = gasto + icms
print(round(valor,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
---- user output:
82.09
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
---- user output:
58.95
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
---- user output:
62.94
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
---- user output:
93.91
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
---- user output:
77.88
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
---- user output:
51.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:05:41)
-- CODE: 
consumo = float(input())
gasto = consumo * 0,22 + 23
icms = gasto * 0.25
valor = gasto = icms
print(round(valor,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * 0.25
           ~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:09:43)
-- CODE: 
consumo = float(input())
gasto = consumo * 0.22 + 23
icms = gasto * (31/100)
valor = gasto + icms
print(round(valor,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor,x))
                      ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor,x))
                      ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor,x))
                      ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor,x))
                      ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor,x))
                      ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor,x))
                      ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:09:04)
-- CODE: 
consumo = float(input())
gasto = consumo * 0,22 + 23
icms = gasto * (31/100)
valor = gasto + icms
print(round(valor,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:09:28)
-- CODE: 
consumo = float(input())
gasto = consumo * 0.22 + 23
icms = gasto * (31/100)
valor = gasto + icms
print(round(valor,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor,x))
                      ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor,x))
                      ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor,x))
                      ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor,x))
                      ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor,x))
                      ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(valor,x))
                      ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:02:06)
-- CODE: 
consumo = float(input())
gasto = consumo * 0,22 + 23
icms = gasto * (25/100)
valor = gasto = icms
print(round(valor,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (25/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:59:01)
-- CODE: 
consumo = float(input())
gasto = consumo * 0,22 + 23
icms = gasto * (31/100)
valor = gasto = icms
print(round(valor,x))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    icms = gasto * (31/100)
           ~~~~~~^~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 23:07:47)
-- CODE: 
consumo = float(input())
gasto = consumo * 0,22 + 23
icms = gasto * (31/100)
valor = gasto + icms
print(round(valor,x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
File "XXXX", line 5
    print(round(valor,x)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
File "XXXX", line 5
    print(round(valor,x)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
File "XXXX", line 5
    print(round(valor,x)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
File "XXXX", line 5
    print(round(valor,x)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
File "XXXX", line 5
    print(round(valor,x)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
File "XXXX", line 5
    print(round(valor,x)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
